--- a/package.json
+++ b/package.json
@@ -55,10 +55,13 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
+    "react-tsparticles": "^2.12.2",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0",
     "vaul": "^0.9.9",
     "zod": "3.25.76"
   },
