--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "react-tsparticles": "^2.12.2",
